# clab-ceis

./: .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh  post-start.sh  postCreate.sh
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ceis-integration-tests.yml  ceis-unit-tests.yml
clab_ceis/: ce_stage.py  ceis.py  ceis_callbacks.py  ceis_data.py  config.py  shop.py  shop_callbacks.py  shop_old.py
clab_ceis/assets/: styles.css
clab_ceis/assets/graphdb/: Dockerfile  entrypoint.sh
clab_ceis/assets/graphdb/conf/: Ontology CEIS.ttl  ceis-dev-local-repo.ttl
clab_ceis/assets/graphdb/data/: ceis-dev-local-repo.ttl
clab_ceis/callbacks/: dashboard_callbacks.py  skirt_callbacks.py  top_callbacks.py
clab_ceis/ceis_admin/: README.md  config.py  main.py  process_manager.py  pyproject.toml
clab_ceis/ceis_admin/tests/: test_admin.py  test_process_manager.py
clab_ceis/ceis_backend/: Dockerfile  __init__.py  ceis_backend.db  config.py  db_init.py  designer_balance.py  location_details.py  main.py  manufacturer_distance_sync.py  models.py  pyproject.toml  queries.py  recipes.py  test_api.py  utils.py  wiser_bridge.py
clab_ceis/ceis_backend/data/: Lake Constance Region Manufacturers.csv  designer_balance_mock_data.json  location_details.py
clab_ceis/ceis_backend/queries/: getTopData.rq  isMaterialAvailable.rq  topRecipes.rq
clab_ceis/ceis_backend/tests/: test_designer_balance.py  test_fabric_block_recipe.py  test_manufacturer_distance_sync.py  test_wiser_bridge.py
clab_ceis/ceis_dashboard/: ceis.py  ceis_callbacks.py  ceis_data.py  config.py  main.py  pyproject.toml
clab_ceis/ceis_dashboard/callbacks/: __init__.py  api.py  co2.py  dashboard_table.py  designer_balance.py  fabric_blocks.py  garment_designer.py  recipe_types.py  repair.py
clab_ceis/ceis_dashboard/pages/: co2.py  designer_balance.py  flow.py  garment_designer.py  home.py  old_dashboard.py  recipe.py  ui.py
clab_ceis/ceis_dashboard/tests/: test_api.py  test_backend_integration.py  test_layout.py
clab_ceis/ceis_ontology/: ceis.ttl
clab_ceis/ceis_shop/: main.py  pyproject.toml  shop_callbacks.py
clab_ceis/ceis_shop/callbacks/: __init__.py
clab_ceis/ceis_shop/layouts/: garment.py  home.py  scenarios.py  skirt.py  top.py  ui.py
clab_ceis/ceis_shop/tests/: test_backend_integration.py  test_layouts.py
clab_ceis/layouts/: dashboard.py
clab_ceis/shop/: __init__.py  config.py  pyproject.toml  shop.py  shop_callbacks.py  shop_old.py  sparql_queries.py
clab_ceis/shop/callbacks/: dashboard_callbacks.py  skirt_callbacks.py  top_callbacks.py
clab_ceis/shop/layouts/: __init__.py  home.py  skirt.py  top.py
clab_ceis/utils/: run_query.py  sparql_queries.py
doc/: views.md
doc/assets/: clab_ceis_shop.puml
tests/: test_fabric_block_recipe.py
