[tool.poetry]
name = "clab_ceis"
version = "0.1.0"
description = ""
authors = ["Alessandro Giugno <alessandro.giugno@unisg.ch>"]
readme = "README.md"
packages = [
 { include = "clab_ceis" }
]

[tool.poetry.scripts]
ceis = "clab_ceis.ceis_dashboard.ceis:main"
shop = "clab_ceis.shop.shop:main"

[tool.poetry.dependencies]
python = "^3.12"
dash = "^2.15.0"
pandas = "^2.2.0"
dash-cytoscape = "^1.0.0"
httpx = "^0.26.0"
sparqlwrapper = "^2.0.0"

[tool.poetry.group.dev.dependencies]
commitizen = "^3.14.1"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"