[project]
name = "clab-ceis"
version = "0.1.0"
description = ""
authors = [
    {name = "Alessandro Giugno", email = "alessandro.giugno@unisg.ch"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=2.15.0",
    "pandas>=2.2.0",
    "dash-cytoscape>=1.0.0",
    "httpx>=0.26.0",
    "sparqlwrapper>=2.0.0",
    "pydantic>=2.6.1",
]

[project.scripts]
ceis-dashboard = "clab_ceis.ceis_dashboard.ceis:main"
shop = "clab_ceis.shop.shop:main"

[dependency-groups]
dev = [
    "commitizen>=3.14.1",
    "black>=25.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"