[project]
name = "ceis-admin"
version = "0.1.0"
description = "Admin application to monitor and control the CEIS apps"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12,<0.116.0",
    "uvicorn>=0.34.0,<0.35.0",
    "httpx>=0.28.1,<0.29.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".."]
include = ["ceis_admin*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
