[project]
name = "ceis-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "requests>=2.32.5",
    "python-dotenv>=1.0.0",
    "dotenv>=0.9.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[build-system]
# Using hatchling as build backend - modern, PEP 517 compliant
# Follows Python packaging best practices for editable installs
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Flat layout: package is in the current directory
packages = ["."]

[tool.pytest.ini_options]
# Best practice: Configure pytest to find modules without sys.path manipulation
# pythonpath adds the current directory to Python's import path during test discovery
pythonpath = ["."]
testpaths = ["tests"]
# Use importlib mode for better compatibility with namespace packages
addopts = "--import-mode=importlib"
