[project]
name = "ceis-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "requests>=2.32.5",
    "python-dotenv>=1.0.0",
    "dotenv>=0.9.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Package root is one level up, so setuptools can find ceis_backend as a package package-dir = {"" = ".."}

[tool.setuptools.packages.find]
where = [".."]
include = ["ceis_backend*"]

[tool.pytest.ini_options]
# Best practice: Configure pytest to find modules without sys.path manipulation
# pythonpath adds the current directory to Python's import path during test discovery
pythonpath = ["."]
testpaths = ["tests"]
# Use importlib mode for better compatibility with namespace packages
addopts = "--import-mode=importlib"
