[project]
name = "ceis-dashboard"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "ceis-backend",
    "dash>=4.0.0",
    "dash-cytoscape>=1.0.2",
    "pandas>=3.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pages", "callbacks"]
only-include = ["pages", "callbacks", "*.py"]

[tool.uv.sources]
ceis-backend = { path = "../ceis_backend", editable = true }
