[project]
name = "ceis-shop"
version = "0.1.0"
description = "CEIS Shop application"
requires-python = ">=3.13"
dependencies = [
    "ceis-dashboard",
    "dash>=4.0.0",
]

[project.scripts]
ceis-shop = "shop:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["callbacks", "layouts"]
only-include = ["callbacks", "layouts", "shop.py", "sparql_queries.py", "__init__.py"]

[tool.uv.sources]
ceis-dashboard = { path = "../ceis_dashboard", editable = true }
